# Traffic-Sign-Recognition

./: .gitignore  README.md  requirements.txt
inference_yolov8n/: CMakeLists.txt  classes.yaml  main.cpp
notebook/: EDA_YOLO.ipynb
